fix(ci): اصلاح ci
Signed-off-by: MD Amanalikhani <md.akhi.ir@gmail.com>
Co-authored-by: MD Amanalikhani <md.akhi.ir@gmail.com>

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -35,7 +35,6 @@ jobs:
           node-version: "18.x"
           registry-url: "https://registry.npmjs.org"
 
-      # Setup .npmrc file to publish to NPM Packages
       - run: |
           npm install
           npm run build
@@ -53,11 +52,11 @@ jobs:
       #     npm publish --access public
 
       # WithOut Scop
+      # Setup .npmrc file to publish to NPM Packages
       - name: Set package registry without -scope
         run: npm config set registry=https://registry.npmjs.org/
       - name: Npm registry authentication
         run: npm set //registry.npmjs.org/:_authToken=$NPM_TOKEN
-      - name: registry always authentication
       - run: |
           npm publish --access public
 
@@ -73,9 +72,7 @@ jobs:
         with:
           node-version: "18.x"
           registry-url: "https://npm.pkg.github.com"
-          scope: "@md-akhi"
-
-      # Setup .npmrc file to publish to GitHub Packages
+          # scope: "@md-akhi"
 
       - run: |
           npm install
@@ -84,14 +81,14 @@ jobs:
         uses: JesseTG/rm@v1.0.3
         with:
           path: docs
+
       # With Scop
+      # Setup .npmrc file to publish to GitHub Packages
       - name: Set package registry
         run: npm config set @md-akhi:registry=https://npm.pkg.github.com/
       - name: Github package registry authentication
         run: npm set //npm.pkg.github.com/:_authToken=$GITHUB_TOKEN
-      - name: registry always authentication
       - run: |
-          npm pkg set name='@md-akhi/shdate'
           npm publish
 
       # WithOut Scop
