--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,31 +1,26 @@
-name: Tests
-
+name: Tests Package
 on:
   push:
-    branches: [dev, rls/*, main]
+    branches: [dev, rls/*]
   pull_request:
-    branches: [dev, rls/*, main]
-
+    branches: [dev, rls/*]
 jobs:
   build:
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
         node-version:
           [16.x, 18.x, 20.x]
           # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-    name: Node ${{ matrix.node }}
-
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-          # cache: "npm"
-          # cache-dependency-path: package-lock.json
+          cache: "npm"
+          cache-dependency-path: package-lock.json
       - run: |
-          npm install
+          npm ci
           npm test
-      # npm run build --if-present
+      #   npm run build --if-present
