--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,6 +20,6 @@ jobs:
           node-version: ${{ matrix.node-version }}
           # cache: "npm"
       - run: |
-          npm ci
+          npm i
           npm test
       #   npm run build --if-present
