--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -19,6 +19,7 @@ jobs:
         with:
           node-version: $NODE_VERSION
       - name: Install dependencies
+        shell: bash
         run: |
           npm install
           npm test
@@ -43,6 +44,7 @@ jobs:
         with:
           path: docs
       - name: Install dependencies
+        shell: bash
         run: |
           npm install
           npm run build
@@ -86,6 +88,7 @@ jobs:
         with:
           path: docs
       - name: Install dependencies
+        shell: bash
         run: |
           npm install
           npm pkg set name="@md-akhi/shdate"
