--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,7 +5,7 @@ on:
   pull_request:
     branches: [dev, rls/*]
 jobs:
-  build:
+  test-pkg:
     runs-on: ubuntu-latest
     strategy:
       matrix:
