--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -6,8 +6,7 @@ on:
     branches: [main]
   release:
     types: [published]
-env:
-  NODE_VERSION: "18.x"
+# env:
 #   NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
 #   GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 jobs:
@@ -17,7 +16,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v3
         with:
-          node-version: $NODE_VERSION
+          node-version: "18.x"
       - name: Install dependencies
         shell: bash
         run: |
@@ -35,7 +34,7 @@ jobs:
       # Setup .npmrc file to publish to npm
       - uses: actions/setup-node@v3
         with:
-          node-version: $NODE_VERSION
+          node-version: "18.x"
           registry-url: "https://registry.npmjs.org"
           # scope: "@md-akhi"
           always-auth: true
@@ -78,7 +77,7 @@ jobs:
       # Setup .npmrc file to publish to GitHub Packages
       - uses: actions/setup-node@v3
         with:
-          node-version: $NODE_VERSION
+          node-version: "18.x"
           registry-url: "https://npm.pkgs.github.com"
           # Defaults to the user or organization that owns the workflow file
           scope: "@md-akhi"
