ci(style): update
Signed-off-by: MD Amanalikhani <md.akhi.ir@gmail.com>

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: "18.x"
-      - name: Install dependencies
+      - name: Install dependencies & test
         shell: bash
         run: |
           npm install
@@ -31,7 +31,7 @@ jobs:
       contents: read
     steps:
       - uses: actions/checkout@v4
-      # Setup .npmrc file to publish to npm
+      # Setup .npmrc file to publish to NPM Packages
       - uses: actions/setup-node@v3
         with:
           node-version: "18.x"
@@ -42,23 +42,19 @@ jobs:
         uses: JesseTG/rm@v1.0.3
         with:
           path: docs
-      - name: Install dependencies
+      - name: Install dependencies & publish
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
         shell: bash
         run: |
           npm install
           npm run build
           npm publish --access public
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+      # Setup .npmrc file to publish to NPM Packages
       # With Scop
       # - name: Set package registry
       #   run: npm config set @md-akhi:registry https://registry.npmjs.org/
-      # - name: Npm registry authentication
-      #   run: npm set //registry.npmjs.org/:_authToken $NODE_AUTH_TOKEN
-      # - run: |
-      #     npm publish --access public
       # WithOut Scop
-      # Setup .npmrc file to publish to NPM Packages
       # - name: Set package registry without -scope
       #   run: npm config set registry=https://registry.npmjs.org
       # - name: Npm registry authentication
@@ -86,29 +82,24 @@ jobs:
         uses: JesseTG/rm@v1.0.3
         with:
           path: docs
-      - name: Install dependencies
+      - name: Install dependencies & publish
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         shell: bash
         run: |
           npm install
           npm pkg set name="@md-akhi/shdate"
           npm run build
           npm publish
-        env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-      # With Scop
       # Setup .npmrc file to publish to GitHub Packages
+      # With Scop
       # - name: Set package registry with -scope
-      #   run: npm config set @md-akhi:registry=https://npm.pkgs.github.com
-      # - name: Github package registry authentication
-      #   run: npm set //npm.pkgs.github.com/:_authToken=$GITHUB_TOKEN
-      # - run: |
-      #     npm pkgs set name="@md-akhi/shdate"
-      #     npm publish
+      #   run: npm config set @md-akhi:registry=https://npm.pkg.github.com
       # WithOut Scop
       # - name: Set package registry without -scope
-      #   run: npm config set registry https://npm.pkgs.github.com/
+      #   run: npm config set registry=https://npm.pkg.github.com/
       # - name: Github package registry authentication
-      #   run: npm set //npm.pkgs.github.com/:_authToken $GITHUB_TOKEN
+      #   run: npm set //npm.pkg.github.com/:_authToken=$GITHUB_TOKEN
       # - run: |
-      #     npm pkgs set name="@md-akhi/shdate"
+      #     npm pkg set name="@md-akhi/shdate"
       #     npm publish
