--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -8,7 +8,6 @@
 
 version: 2
 updates:
-
   # Maintain dependencies for npm
   - package-ecosystem: "npm"
     # Look for `package.json` and `lock` files in the `root` directory
@@ -20,7 +19,8 @@ updates:
       timezone: "Asia/Tehran"
       # Labels on pull requests for security and version updates
       labels:
-        - "npm dependencies"
+        - "npm"
+        - "dependencies"
 
   # Maintain dependencies for Docker
   - package-ecosystem: "docker"
@@ -31,6 +31,9 @@ updates:
       interval: "weekly"
       # Use Tehran Standard Time
       timezone: "Asia/Tehran"
+      labels:
+        - "docker"
+        - "dependencies"
 
   # Maintain dependencies for GitHub Actions
   - package-ecosystem: "github-actions"
@@ -39,11 +42,6 @@ updates:
       interval: "weekly"
       # Use Tehran Standard Time
       timezone: "Asia/Tehran"
-
-  # Maintain dependencies for npm
-  - package-ecosystem: "npm"
-    directory: "/"
-    schedule:
-      interval: "weekly"
-      # Use Tehran Standard Time
-      timezone: "Asia/Tehran"
+      labels:
+        - "action"
+        - "dependencies"
