feat(ci): افرودن scope npm & gihub و shdatetime
Signed-off-by: MD Amanalikhani <md.akhi.ir@gmail.com>

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -62,6 +62,35 @@ jobs:
       # - run: |
       #     npm publish --access public
 
+  publish-npmjs-pkgs-scope: #NPM Packages
+    needs: publish-npmjs-pkgs
+    runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
+    steps:
+      - uses: actions/checkout@v4
+      # Setup .npmrc file to publish to NPM Packages
+      - uses: actions/setup-node@v3
+        with:
+          node-version: "18.x"
+          registry-url: "https://registry.npmjs.org"
+          scope: "@md-akhi"
+          always-auth: true
+      - name: Removed Docs File
+        uses: JesseTG/rm@v1.0.3
+        with:
+          path: docs
+      - name: Install dependencies & publish
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+        shell: bash
+        run: |
+          npm install
+          npm run build
+          npm pkg set name="@md-akhi/shdatetime"
+          npm publish --access public
+
   publish-gitHub-pkgs: #GitHub Packages
     needs: tests-pkgs
     runs-on: ubuntu-latest
@@ -103,3 +132,33 @@ jobs:
       # - run: |
       #     npm pkg set name="@md-akhi/shdate"
       #     npm publish
+
+  publish-gitHub-pkgs-scope: #GitHub Packages
+    needs: publish-gitHub-pkgs
+    runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
+    steps:
+      - uses: actions/checkout@v4
+      # Setup .npmrc file to publish to GitHub Packages
+      - uses: actions/setup-node@v3
+        with:
+          node-version: "18.x"
+          registry-url: "https://npm.pkg.github.com"
+          # Defaults to the user or organization that owns the workflow file
+          scope: "@md-akhi"
+          always-auth: true
+      - name: Removed Docs File
+        uses: JesseTG/rm@v1.0.3
+        with:
+          path: docs
+      - name: Install dependencies & publish
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+        shell: bash
+        run: |
+          npm install
+          npm pkg set name="@md-akhi/shdatetime"
+          npm run build
+          npm publish
