fix(tests): رفع خطای اجرای تست روی شاخه انتشار (release)
Signed-off-by: MD Amanalikhani <md.akhi.ir@gmail.com>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,9 +1,9 @@
 name: Tests Packages
 on:
   push:
-    branches: [dev, rls/*]
+    branches: [dev, release/*]
   pull_request:
-    branches: [dev, rls/*]
+    branches: [dev, release/*]
 jobs:
   tests-pkgs:
     runs-on: ubuntu-latest
