--- a/tsconfig.mjs.json
+++ b/tsconfig.mjs.json
@@ -1,7 +1,7 @@
 {
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    // "strict": true,
+    "strict": true,
     "moduleResolution": "bundler",
     "module": "es2022",
     "outDir": "dist/mjs",
