refactor(gulp): بازنویسی gulp
Signed-off-by: MD Amanalikhani <md.akhi.ir@gmail.com>

--- a/package.json
+++ b/package.json
@@ -40,14 +40,14 @@
     "dev:watch": "node dist/tests/dev.js",
     "watch": "tsc -w",
     "build": "run-s build:*",
-    "build:version": "gulp setDescription",
+    "build:version": "gulp setDocBlockDescription",
     "build:clean": "rm -rf dist src/browser",
     "build:tsc": "run-p tsc:cjs tsc:mjs tsc:browser && gulp",
     "test": "npm run tsc:test && mocha",
     "test:dev": "nodemon npm run test",
-    "tsc:cjs": "tsc --project tsconfig.json  && echo {\"type\":\"commonjs\"}>dist/cjs/package.json && gulp moveDTS && gulp delDTS",
+    "tsc:cjs": "tsc --project tsconfig.json  && echo {\"type\":\"commonjs\"}>dist/cjs/package.json && gulp moveDotDToTypes && gulp deletDotDFromCJSTS",
     "tsc:mjs": "tsc --project tsconfig.mjs.json && echo {\"type\":\"module\"}>dist/mjs/package.json",
-    "tsc:browser": "gulp combineTS && tsc --project tsconfig.browser.json",
+    "tsc:browser": "gulp MergeFilesBrowserTS && tsc --project tsconfig.browser.json",
     "tsc:test": "tsc --project tsconfig.test.json && echo {\"type\":\"commonjs\"}>dist/tests/cjs/package.json && echo {\"type\":\"module\"}>dist/tests/mjs/package.json",
     "test:build": "npm run tsc:test && node dist/tests/build-test.js > tests/build-test.log",
     "prepare": "husky install"
