--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "scripts": {
     "start": "npm run dev",
     "dev": "nodemon --exec run-s dev:clean tsc:test dev:watch --watch ./src",
-    "dev:clean": "rm -rf dist/src dist/tests tests/tst.out",
+    "dev:clean": "gulp devClean",
     "dev:watch": "node dist/tests/dev.js",
     "watch": "tsc -w",
     "build": "run-s build:*",
@@ -45,11 +45,11 @@
     "build:tsc": "run-p tsc:cjs tsc:mjs tsc:browser && gulp",
     "test": "npm run tsc:test && mocha",
     "test:dev": "nodemon npm run test",
-    "tsc:cjs": "tsc --project tsconfig.json  && echo {\"type\":\"commonjs\"}>dist/cjs/package.json && gulp moveDotDToTypes",
-    "tsc:mjs": "tsc --project tsconfig.mjs.json && echo {\"type\":\"module\"}>dist/mjs/package.json",
-    "tsc:browser": "gulp MergeFilesBrowserTS && tsc --project tsconfig.browser.json",
-    "tsc:test": "tsc --project tsconfig.test.json && echo {\"type\":\"commonjs\"}>dist/tests/cjs/package.json && echo {\"type\":\"module\"}>dist/tests/mjs/package.json",
-    "test:build": "npm run tsc:test && node dist/tests/build-test.js > tests/build-test.log",
+    "tsc:cjs": "gulp buildCjs",
+    "tsc:mjs": "gulp buildMjs",
+    "tsc:browser": "gulp buildBrowser",
+    "tsc:test": "gulp buildTests",
+    "test:build": "gulp buildUntilTests",
     "prepare": "husky install"
   },
   "main": "./dist/cjs/base.js",
@@ -86,11 +86,21 @@
   },
   "typesVersions": {
     "*": {
-      ".": ["dist/types/base.d.ts"],
-      "./words": ["./dist/types/word.d.ts"],
-      "./tools": ["./dist/types/tools.d.ts"],
-      "./lang/*": ["./dist/types/languages/i18n/*.d.ts"],
-      "./lang/l10n/*": ["./dist/types/languages/l10n/*.d.ts"]
+      ".": [
+        "dist/types/base.d.ts"
+      ],
+      "./words": [
+        "./dist/types/word.d.ts"
+      ],
+      "./tools": [
+        "./dist/types/tools.d.ts"
+      ],
+      "./lang/*": [
+        "./dist/types/languages/i18n/*.d.ts"
+      ],
+      "./lang/l10n/*": [
+        "./dist/types/languages/l10n/*.d.ts"
+      ]
     }
   },
   "directories": {
@@ -100,8 +110,16 @@
     "man": "./docs",
     "docs": "./docs"
   },
-  "files": ["LICENSE", "README.md", "CHANGELOG.md", "docs", "dist"],
-  "man": ["./docs/**/*.md"],
+  "files": [
+    "LICENSE",
+    "README.md",
+    "CHANGELOG.md",
+    "docs",
+    "dist"
+  ],
+  "man": [
+    "./docs/**/*.md"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/md-akhi/SHDateTime-js.git"
@@ -155,7 +173,19 @@
     }
   },
   "lint-staged": {
-    "/**/*.{ts}": ["prettier --write", "eslint --fix", "git add"],
-    "*": ["prettier --write", "git add"]
+    "/**/*.{ts}": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ],
+    "*": [
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "dependencies": {
+    "test_cjs": "file:tests/cjs",
+    "test_mjs": "file:tests/mjs",
+    "tests": "file:tests/pkgs"
   }
 }
