refactor(gulp): بازنویسی gulp
Signed-off-by: MD Amanalikhani <md.akhi.ir@gmail.com>

--- a/package.json
+++ b/package.json
@@ -34,17 +34,16 @@
   "license": "AGPL-3.0",
   "scripts": {
     "start": "npm run dev",
-    "dev": "nodemon --exec run-s dev:clean tsc:test dev:watch --watch ./src",
+    "dev": "nodemon --exec run-s dev:clean (gulp buildTestsTSC) dev:watch --watch ./src",
     "dev:clean": "gulp devClean",
     "dev:watch": "node dist/tests/dev.js",
     "watch": "tsc -w",
     "build": "run-s build:*",
-    "build:version": "gulp setDocBlockDescription",
-    "build:clean": "rm -rf dist src/browser",
+    "build:clean": "gulp buildClean",
     "build:tsc": "gulp buildTSC && gulp",
-    "test": "npm run tsc:test && mocha",
+    "build:version": "gulp setDocBlockDescription",
+    "test": "gulp buildTestsTSC && mocha",
     "test:dev": "nodemon npm run test",
-    "tsc:test": "gulp buildTestsTSC",
     "test:build": "gulp buildUntilTests",
     "prepare": "husky install"
   },
