--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -26,7 +26,7 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-          npm test
+          npm run test:release
 
   publish-npmjs-pkgs: #NPM Packages
     needs: tests-pkgs
