--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,4 +27,4 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-          npm test
+          npm run test:release
