--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "keywords": [
     "date",
     "time",
-    "date time",
     "date and time",
     "datetime",
     "shdatetime",
@@ -15,7 +14,6 @@
     "jdate",
     "jalali",
     "shamsi",
-    "shamsi hijri",
     "shamsi hijri",
     "solar hijri",
     "iranian hijri",
@@ -33,18 +31,14 @@
   "author": "Mohammad Amanalikhani <md.akhi.ir@gmail.com> (http://md.akhi.ir)",
   "license": "AGPL-3.0",
   "scripts": {
-    "start": "npm run dev",
-    "dev": "nodemon --exec run-s dev:clean (gulp buildTestsTSC) dev:watch --watch ./src",
-    "dev:clean": "gulp devClean",
-    "dev:watch": "node dist/tests/dev.js",
+    "start": "gulp test && node dist/tests/dev.js",
+    "dev": "nodemon --exec npm start",
     "watch": "tsc -w",
-    "build": "run-s build:*",
-    "build:clean": "gulp buildClean",
-    "build:tsc": "gulp buildTSC && gulp",
-    "build:version": "gulp setDocBlockDescription",
-    "test": "gulp buildTestsTSC && mocha",
-    "test:dev": "nodemon npm run test",
-    "test:build": "gulp buildUntilTests",
+    "build": "gulp build",
+    "test": "gulp test && mocha",
+    "test:release": "gulp testRelease && mocha",
+    "dev:test": "nodemon --exec npm test",
+    "test:build": "gulp compileTest && node dist/tests/build-test.js > tests/build-test.log",
     "prepare": "husky install"
   },
   "main": "./dist/cjs/base.js",
