--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -8,7 +8,7 @@ on:
     types: [published]
 # env:
 #   NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
-#   GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+#   NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
 jobs:
   tests-pkgs: #TEST Packages
     runs-on: ubuntu-latest
@@ -118,7 +118,7 @@ jobs:
           path: docs
       - name: Install dependencies & publish
         env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
         shell: bash
         run: |
           npm install
@@ -160,7 +160,7 @@ jobs:
           path: docs
       - name: Install dependencies & publish
         env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
         shell: bash
         run: |
           npm install
