--- a/tsconfig.browser.json
+++ b/tsconfig.browser.json
@@ -4,12 +4,12 @@
     "moduleResolution": "node10",
     "module": "umd",
     "outDir": "dist/browser",
-    "target": "es2022",
-    "lib": ["dom", "es2022"],
+    "target": "es6",
+    "lib": ["dom", "es6"],
     "esModuleInterop": false,
     "noImplicitAny": true,
-    "sourceMap": true,
-    "declaration": true,
+    "sourceMap": false,
+    "declaration": false,
     "removeComments": true
   },
   "compileOnSave": false,
