--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,7 +5,7 @@ on:
   pull_request:
     branches: [dev, release/*]
 jobs:
-  tests-pkgs:
+  test-pkgs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -21,10 +21,13 @@ jobs:
       - name: Removed pkgs test File
         uses: JesseTG/rm@v1.0.3
         with:
-          path: tests/pkgs.spec.ts
-      - name: Install dependencies & Tests
+          path: test/pkgs.spec.ts
+      - name: Install Dependencies
         shell: bash
         run: |
           npm install
           npm run build --if-present
+      - name: Run Test
+        shell: bash
+        run: |
           npm run test:release
