--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,7 +20,7 @@
         "${workspaceFolder}/test"
       ],
       "internalConsoleOptions": "openOnSessionStart",
-      "name": "Mocha Tests",
+      "name": "Mocha test",
       "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
       "request": "launch",
       "skipFiles": ["<node_internals>/**"],
