--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,9 +1,9 @@
 name: Tests Packages
 on:
   push:
-    branches: [dev, release/*]
+    branches: [main, dev, release/*, hotfix/*]
   pull_request:
-    branches: [dev, release/*]
+    branches: [main, dev, release/*, hotfix/*]
 jobs:
   test-pkgs:
     runs-on: ubuntu-latest
